main.tf
resource "aws_vpc" "demo_vpc" {
  vpc_id = aws_vpc.demo_vpc.id 
  cidr_block = "${var.vpc_cidr}"
  enable_nat_gateway = true
  tags = {
    Name = "demo_vpc" 
  } 
}
resource "aws_subnet_ids" "Public_subnet" {
  vpc_id = aws_vpc.demo_vpc.id 
  cidr_block = "${ var.Public_cidr_block }" 
  map_public_ip_on_lunch = "true" 
  availability_zone = data.aws_availability_zones.az.names[0]
    
  tags = {
    Name = "Public_subnet" 
    }
  } 

resource "aws_subnet_ids" "Private_subnet" {
  vpc_id = aws_vpc.demo_vpc.id 
  cidr_block = "${var.Private_cidr_block}" 
  map_public_ip_on_lunch = "false" 
  availability_zone = data.aws_availability_zones.az.names[0]
    
  tags = {
    Name = "Private_subnet" 
    }
  }
resource "aws_internet_gateway" "demo_igw" { 
  vpc_id = aws_vpc.demo_vpc.id 
  
  tags = {
    Name = "Demo_igw"
  }
  
} 
resource "aws_route_table" "Public_route" { 
  vpc_id = aws_vpc.demo_vpc.id 

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.demo_igw.id
  }
  
  tags = {
    Name = "public" 
  }
} 
resource "aws_route_table" "Private_route" { 
  vpc_id = aws_vpc.demo_vpc.id 

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id =  aws_nat_gateway.demo_nat.id
  }
  
  tags = {
    Name = "private" 
  }
} 
resource "aws_route_table_association" "public" {
  subnet_id = aws_subnet_ids.Public_subnet.id 
  route_table_id = aws_route_table.Public_route
} 
resource "aws_route_table_association" "private" {
  subnet_id = aws_subnet_ids.Private_subnet.id 
  route_table_id = aws_route_table.Private_route
} 
resource "aws_eip" "nat_eip" {
  vpc = "true" 
  count = "1" 
  depends_on = [aws_internet_gateway.demo_igw] 
  tags = {
    Name = "nat_gateway_eip" 
  }
} 
resource "aws_nat_gateway" "demo_nat" {
  allocation_id =  aws_eip.nat_eip[count.index].id
  subnet_id = aws_subnet_ids.Public_subnet.id
  
  tags = {
    Name = "nat_gateway_eip" 
  }
} 

resource "aws_security_group" "allow_tls" {
  name        = "allow_tls"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.demo_vpc.id

  ingress {
    description      = "TLS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }
  ingress {
    description      = "TLS from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_tls"
  }
}

resource "aws_autoscaling_group" "Demo-asg-tf" {
  name             = "Demo-asg-tf"
  desired_capacity = 1
  max_size         = 2
  min_size         = 1
  force_delete     = true
  depends_on       = ["aws_lb.application_lb"]
  target_group_arns = "${aws_lb_target_group.target_group.arn}" 
  health_check_type = "EC2"
  vpc_zone_identifier = ["${aws_subnet_ids.Private_subnet.id}"]    
  
}

resource "aws_instance" "web-server" {
  ami           = "${var.image_id}"
  instance_type = "${var.instance_type}"
  region        = "${var.region}"
  security_group = data.aws_security_group.allow_tls.name 
  count         = 2 
  vpc_id         =  aws_vpc.demo_vpc.id 
  subnet_id      =  aws_subnet_ids.Public_subnet.id
  associate_public_ip_address =  true

  tags = { 
    Name = "Public-instance"  
}   
} 
resource "aws_instance" "DB_server" {
  ami            = "${var.image_id}"
  instance_type  = "${var.instance_type}"
  region         = "${var.region}"
  security_group = data.aws_security_group.allow_tls.name
  vpc_id         =  aws_vpc.demo_vpc.id 
  subnet_id      =  aws_subnet_ids.Private_subnet
  count          =  1
  associate_public_ip_address =  false

  tags = {
    Name = "private-instance"
  }
}
